# Trading-System

./: .gitignore  README.md
Backend/: BoundedBuffer.cpp  CMakeLists.txt  MQ.cpp  MQ.h  Synchronizer.cpp  Synchronizer.h  main.cpp
Database/: buy_orders.sql  login.sql  schema.sql  sell_orders.sql  trades.sql
Dispatcher/: CMakeLists.txt  Sema.cpp  SessionManager.cpp  SessionManager.h  SimplePocoHandler.cpp  Synchronizer.cpp  Synchronizer.h  dispatcher-config.json  main.cpp
Worker/: CMakeLists.txt  Order.cpp  Order.h  RedisCache.cpp  RedisCache.h  RequestProcessor.cpp  RequestProcessor.h  SimplePocoHandler.h  Trade.cpp  Trade.h  TradeEngine.cpp  TradeEngine.h  User.cpp  User.h  main.cpp  utils.cpp  utils.h  worker-config.json
